--- a/service-a/html/css/skeleton.css
+++ b/service-a/html/css/skeleton.css
@@ -126,7 +126,7 @@ body {
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222;
- background-color: red;}
+ background-color: #eee;}
 
 
 /* Typography
