--- a/service-b/html/css/skeleton.css
+++ b/service-b/html/css/skeleton.css
@@ -126,7 +126,7 @@ body {
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #eee;
-background-color: blue;}
+background-color: #222;}
 
 
 /* Typography
